--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,9 @@ url: "" # the base hostname & protocol for your site
 email: spel@ing.uchile.cl
 logo: img/logos/spel.svg
 header-image:
-   image: img/bg-astronaut.jpg
-   attrib: Photo by Niketh Vellanki on Unsplash
+   #image: img/bg-astronaut.jpg
+   #attrib: Photo by Niketh Vellanki on Unsplash
+   image: img/constelacion-UCH.jpg
 
 # Build settings
 markdown: kramdown
