--- a/_config.yml
+++ b/_config.yml
@@ -338,3 +338,10 @@ team:
     role: Engineering
     img: profile.jpg
     url:
+
+Alumni:
+  - name: Aa
+    degree: Ph.D Physics
+    role: Associate professor
+    img: profile.jpg
+    url: 
