me as an example of alumni

--- a/_config.yml
+++ b/_config.yml
@@ -340,8 +340,8 @@ team:
     url:
 
 alumni:
-  - name: Example
-    degree: Ph.D Physics
-    role: Associate professor
-    img: profile.jpg
+  - name: Cristóbal Garrido
+    degree: Mechanical Engineer
+    role: Engineering
+    img: cgarrido.jpg
     url: 
