--- a/_config.yml
+++ b/_config.yml
@@ -344,6 +344,8 @@ team:
     role: Engineering
     img: cgarrido.jpg
     url: 
+
+    name: Yohadne Stable
     
 alumni:
   - name: Cristóbal Garrido
