--- a/_config.yml
+++ b/_config.yml
@@ -358,7 +358,7 @@ team:
  - name: Sofía Vargas Payera
     degree: Doctor of Science
     role: Trandisciplinary  Researcher
-    img: svargas.jpg
+    img: svargas.jpeg
 
     
 alumni:
@@ -371,6 +371,7 @@ alumni:
 publications:
  Papers:
 
+   A. Avila, M.A. Díaz, F. Pizarro "Circular Polarized 3D-Printed Enclosed Twist Dielectric Resonator Antenna" 2023 IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting (USNC-URSI), Pages 701-702, http://dx.doi.org/10.1109/USNC-URSI52151.2023.10237529</li>
    J.C. Valdés-Abreu, M.A. Díaz, M Bravo, and Y. Stable-Sanchez, "IonosphericTotal Electron Content Changes during the 15 February 2018 and 30 April 2022 Solar Eclipses over South America and Antarctica", Remote Sensing  Volume 15 Issue 19, 3 October 2023,  EISSN 2072-4292</li>
    <li>A. Avila, M.A. Díaz, F. Pizarro "Circular Polarized 3D-Printed Enclosed Twist Dielectric Resonator Antenna" 2023 IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting (USNC-URSI), Pages 701-702, http://dx.doi.org/10.1109/USNC-URSI52151.2023.10237529</li>
    S.Díaz, M. A. Díaz, E. Rajo-Iglesias, "Circular polarized 3D-printed cylindrical DRA using parasitic dielectric helix" SCIENTIFIC REPORTS	SCOPUS/UCH/VID, July 2023, http://dx.doi.org/10.1038/s41598-023-39098-2</li>
