--- a/_config.yml
+++ b/_config.yml
@@ -355,7 +355,7 @@ team:
     role: Associate professor
     img: mhadjara.jpg
     
- - name: Sofía Vargas Payera
+ - name: Sofía Vargas 
     degree: Doctor of Science
     role: Trandisciplinary  Researcher
     img: svargas.jpeg
