--- a/_config.yml
+++ b/_config.yml
@@ -358,7 +358,7 @@ team:
   - name: Sofía Vargas 
     degree: Doctor of Science
     role: Trandisciplinary  Researcher
-    img: svargas.jpeg
+    img: svargaspay.jpg
 
     
 alumni:
