--- a/_config.yml
+++ b/_config.yml
@@ -360,7 +360,8 @@ team:
     role: Trandisciplinary  Researcher
     img: svargaspayera.jpg
 
-    
+  - name:
+   
 alumni:
   - name: Cristóbal Garrido
     degree: Mechanical Engineer
