--- a/_config.yml
+++ b/_config.yml
@@ -353,7 +353,7 @@ team:
   - name: Massinissa Hadjara
     degree: PhD in Astronomy
     role: Associate professor
-    img: mhadjara.jpg
+    img: mhadjaraB.jpg
     
   - name: Sofía Vargas 
     degree: Doctor of Science
